# aoc2025

./: Cargo.toml
src/: d1p1.rs  d1p2.rs  d2p1.rs  d3p1.rs  d4p1.rs  d4p2.rs
