[package]
name = "aoc2025"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "d1p1"
path = "src/d1p1.rs"

[[bin]]
name = "d1p2"
path = "src/d1p2.rs"

[[bin]]
name = "d2p1"
path = "src/d2p1.rs"

[[bin]]
name = "d3p1"
path = "src/d3p1.rs"

[[bin]]
name = "d4p1"
path = "src/d4p1.rs"

[[bin]]
name = "d4p2"
path = "src/d4p2.rs"

[dependencies]
glam = "0.29.2"
